--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 authors = ["Wang Liu <liuwang_job@163.com>"]
 repository = "https://github.com/wangLiu-gh/chrono-kit"
 documentation = "https://docs.rs/chrono-kit"
-keywords = ["chrono", "tool", "kit", "time", "date", "datetime"]
+keywords = ["chrono", "tool", "kit", "time", "date"]
 categories = ["date-and-time"]
 readme = "README.md"
 
@@ -17,10 +17,10 @@ thiserror = "2.0.14"
 
 [features]
 default = []
-chrono-serde = ["chrono/serde"]                       # 透传 serde 特性
-chrono-rkyv-16 = ["chrono/rkyv-16"]                   # 透传系统时钟支持
-chrono-rkyv-32 = ["chrono/rkyv-32"]                   # 透传系统时钟支持
-chrono-rkyv-64 = ["chrono/rkyv-64"]                   # 透传系统时钟支持
-chrono-rkyv-validation = ["chrono/rkyv-validation"]   # 透传系统时钟支持
-chrono-arbitrary = ["chrono/arbitrary"]               # 透传系统时钟支持
-chrono-unstable-locales = ["chrono/unstable-locales"] # 透传本地化支持
+chrono-serde = ["chrono/serde"]
+chrono-rkyv-16 = ["chrono/rkyv-16"]
+chrono-rkyv-32 = ["chrono/rkyv-32"]
+chrono-rkyv-64 = ["chrono/rkyv-64"]
+chrono-rkyv-validation = ["chrono/rkyv-validation"]
+chrono-arbitrary = ["chrono/arbitrary"]
+chrono-unstable-locales = ["chrono/unstable-locales"]
